<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/dialog_padding">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.CraftLink.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/server_name"
        app:startIconDrawable="@drawable/ic_servers"
        app:startIconTint="@color/oneui_primary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_server_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.CraftLink.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_md"
        android:hint="@string/server_address">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_server_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.CraftLink.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_md"
        android:hint="@string/server_port">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_server_port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="25565"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.CraftLink.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_md"
        android:hint="@string/server_version">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_server_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="1.20.4"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_lg"
        android:text="@string/server_type"
        android:textColor="@color/oneui_text_primary"
        android:textSize="@dimen/text_size_body"
        android:textStyle="bold" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group_server_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_sm"
        app:singleSelection="true"
        app:selectionRequired="true">

        <com.google.android.material.chip.Chip
            style="@style/Widget.CraftLink.Chip"
            android:id="@+id/chip_vanilla"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_type_vanilla"
            android:checked="true" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.CraftLink.Chip"
            android:id="@+id/chip_forge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_type_forge" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.CraftLink.Chip"
            android:id="@+id/chip_bukkit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_type_bukkit" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.CraftLink.Chip"
            android:id="@+id/chip_spigot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_type_spigot" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.CraftLink.Chip"
            android:id="@+id/chip_sponge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_type_sponge" />
    </com.google.android.material.chip.ChipGroup>

</LinearLayout>
