<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/dialog_padding">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.CraftLink.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        app:startIconDrawable="@drawable/ic_profile"
        app:startIconTint="@color/oneui_primary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.CraftLink.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_md"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/oneui_primary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switch_auto_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_lg"
        android:text="@string/auto_login"
        android:textColor="@color/oneui_text_primary"
        app:thumbTint="@color/oneui_primary"
        app:trackTint="@color/oneui_surface_variant" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switch_save_credentials"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_credentials"
        android:textColor="@color/oneui_text_primary"
        app:thumbTint="@color/oneui_primary"
        app:trackTint="@color/oneui_surface_variant" />

</LinearLayout>
