<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/oneui_background">

    <LinearLayout
        android:id="@+id/chat_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:id="@+id/view_connection_status"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:background="@drawable/bg_status_offline" />

        <TextView
            android:id="@+id/tv_connection_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/spacing_sm"
            android:text="@string/disconnected"
            android:textColor="@color/oneui_text_secondary"
            android:textSize="@dimen/text_size_body" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_players"
            style="@style/Widget.CraftLink.Button.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_sm"
            android:text="Players"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_disconnect"
            style="@style/Widget.CraftLink.Button.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disconnect"
            android:visibility="gone" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.CraftLink.TextInputLayout"
        android:id="@+id/til_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_lg"
        android:hint="Search chat..."
        android:visibility="gone"
        app:endIconMode="clear_text"
        app:startIconDrawable="@android:drawable/ic_menu_search">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            android:imeOptions="actionSearch" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_chat"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:padding="@dimen/spacing_lg"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:stackFromEnd="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/spacing_sm"
        android:background="@color/oneui_surface_card"
        android:gravity="center_vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.CraftLink.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/type_message">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_chat_input"
                android:layout_width="match_parent"
                android:layout_height="@dimen/chat_input_height"
                android:inputType="text"
                android:maxLines="1"
                android:imeOptions="actionSend" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_send"
            style="@style/Widget.CraftLink.FAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_sm"
            android:src="@drawable/ic_send"
            app:fabSize="mini"
            app:fabCustomSize="40dp"
            app:iconSize="20dp" />
    </LinearLayout>

    <include
        android:id="@+id/view_not_connected"
        layout="@layout/view_not_connected"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

</FrameLayout>
